# hexagonal-flask-blog-tutorial

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hexagonal.db  hexagonal_test.db  pyproject.toml  pytype.cfg  requirements.txt
src/: README.md
src/adapters/app/: application.py  schema.sql
src/adapters/app/blueprints/: auth.py  blog.py
src/adapters/app/templates/post/: index.html  update.html
src/adapters/db/: post_repository.py  user_repository.py
src/blog/: __init__.py
src/blog/adapters/entrypoints/app/: application.py  schema.sql
src/blog/adapters/entrypoints/app/blueprints/: auth.py  blog.py
src/blog/adapters/entrypoints/app/templates/: base.html
src/blog/adapters/entrypoints/app/templates/auth/: login.html  register.html
src/blog/adapters/entrypoints/app/templates/post/: create.html  index.html  update.html
src/blog/adapters/repositories/: post.py  post_repository.py  user.py  user_repository.py
src/blog/adapters/services/: post.py  user.py
src/blog/adapters/unit_of_works/: post.py  user.py
src/blog/configurator/: config.py  containers.py  post_containers.py  user_containers.py
src/blog/domain/model/: __init__.py  model.py  post.py  schemas.py  user.py  validators.py
src/blog/domain/ports/: __init__.py
src/blog/domain/ports/repositories/: exceptions.py  post.py  repository.py  user.py
src/blog/domain/ports/services/: post.py  post_service.py  user.py  user_service.py
src/blog/domain/ports/unit_of_works/: post.py  user.py
src/domain/model/: post.py  user.py
src/domain/ports/: post_service.py  user_service.py
src/main/: config.py  containers.py  post_containers.py  user_containers.py
tests/: conftest.py  fake_container.py  fake_repositories.py  fake_repository.py  fake_uows.py  test_domain_models.py  test_dtos.py
tests/domain/: test_domain_models.py  test_dtos.py
tests/integration/: test_flask.py  test_post_uow.py  test_user_uow.py
tests/repositories/: test_post_repository.py  test_user_repository.py
tests/unit_of_works/: test_post_uow.py  test_user_uow.py
