[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blog"
authors = [{name = "Shako Rzayev", email = "rzayev.sehriyar@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "dependency-injector >= 4.41.0",
    "flask >= 2.3.2",
]

[project.urls]
Home = "https://github.com/ShahriyarR/hexagonal-flask-blog-tutorial"

[project.optional-dependencies]
test = [
    "pytest-flask >= 1.2.0 ",
    "pytest-cov >= 4.0.0",
]

dev = [
    "black >=23.1.0",
    "isort >=5.12.0",
    "autoflake >=1.4",
    "flake8 >=6.0.0",
    "pre-commit >=2.21.0",
    "pytype >= 2022.12.15",
    "bandit >= 1.7.5",
    "flake8-bugbear >= 22.12.6",
    "flake8-cognitive-complexity >= 0.1.0",
]

[tool.isort]
profile = "black"
py_version = 310
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.bandit]
skips = ["B311"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration relatively slow (deselect with '-m \"not integration\"')",
    "serial",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = "tests"